# crazymouse

./: Cargo.toml  README.md
src/: crtp.rs  main.rs  mouse.rs  packet.rs
