[package]
name = "crazymouse"
version = "0.1.0"
authors = ["Jonas Danielsson <jonas@bitcraze.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.3.8"
hex = "0.4.3"
uinput = { git = "https://github.com/meh/rust-uinput.git" }
byteorder = "1.2.2"
crazyflie-link = { path = "../crazyflie-link-rs/crazyflie-link" }
